[gd_scene load_steps=40 format=2]

[ext_resource path="res://assets/images/gui/inventory/item_frame.png" type="Texture" id=1]
[ext_resource path="res://assets/images/gui/inventory/item_frame_chose.png" type="Texture" id=2]
[ext_resource path="res://assets/Textures_v2/back_charinfo.png" type="Texture" id=3]
[ext_resource path="res://src/scenes/RightClickReactButton.gd" type="Script" id=4]
[ext_resource path="res://assets/Fonts_v2/PT_Sans/PTSans-Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/Textures_v2/MANSION/Skills/Buttons/buttonskill.png" type="Texture" id=6]
[ext_resource path="res://assets/images/gui/gui icons/base_exp.png" type="Texture" id=7]
[ext_resource path="res://assets/Themes_v2/EXPLORATION/SlaveMarketPanel.tres" type="StyleBox" id=8]
[ext_resource path="res://assets/Textures_v2/Universal/Bars/bar_big.png" type="Texture" id=9]
[ext_resource path="res://assets/Textures_v2/Universal/Bars/bar_big_mp.png" type="Texture" id=10]
[ext_resource path="res://assets/Textures_v2/Universal/Bars/bar_big_lust.png" type="Texture" id=11]
[ext_resource path="res://assets/Textures_v2/Universal/Bars/bar_big_hp.png" type="Texture" id=12]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/VScrollBar.tres" type="Theme" id=13]
[ext_resource path="res://GUI_New/ScrollContainer.gd" type="Script" id=14]
[ext_resource path="res://assets/Fonts_v2/PT_Sans/PT_20_Bold.tres" type="DynamicFont" id=15]
[ext_resource path="res://GUI_New/Exploration/ExploreHireModule.gd" type="Script" id=16]
[ext_resource path="res://assets/images/gui/gui icons/food.png" type="Texture" id=20]
[ext_resource path="res://assets/Fonts_v2/PT_Sans/PTSans-Regular.ttf" type="DynamicFontData" id=22]
[ext_resource path="res://assets/Textures_v2/CITY/Buttons/buttonhuge.png" type="Texture" id=23]
[ext_resource path="res://assets/Textures_v2/CITY/Buttons/buttonhuge_hover.png" type="Texture" id=24]
[ext_resource path="res://assets/Textures_v2/CITY/Buttons/buttonhuge_pressed.png" type="Texture" id=25]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/button_stats_hover.png" type="Texture" id=26]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/button_stats.png" type="Texture" id=27]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/button_stats_pressed.png" type="Texture" id=28]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/NonDecorButtons.tres" type="Theme" id=29]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/Ledger_30.tres" type="DynamicFont" id=30]
[ext_resource path="res://assets/Fonts_v2/PT_Sans/PT_24.tres" type="DynamicFont" id=31]
[ext_resource path="res://assets/Fonts_v2/Ledger/Ledger-Regular.ttf" type="DynamicFontData" id=32]
[ext_resource path="res://assets/Textures_v2/CITY/Buttons/buttonred_hover.png" type="Texture" id=33]
[ext_resource path="res://assets/Textures_v2/CITY/Buttons/buttonred_pressed.png" type="Texture" id=34]
[ext_resource path="res://assets/Textures_v2/CITY/Buttons/buttonred.png" type="Texture" id=35]
[ext_resource path="res://assets/Fonts_v2/PT_Sans/PT_30.tres" type="DynamicFont" id=36]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 3 )
region_rect = Rect2( -477, 451, 1, 1 )

[sub_resource type="DynamicFont" id=2]
size = 14
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 32 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 22 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 22 )

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = ExtResource( 22 )

[sub_resource type="DynamicFont" id=7]
size = 48
font_data = ExtResource( 32 )

[node name="ExploreHireModule" type="Panel" groups=[
"pauseprocess",
]]
margin_left = 516.0
margin_top = 137.0
margin_right = 1519.0
margin_bottom = 937.0
custom_styles/panel = ExtResource( 8 )
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HireBG1" type="Panel" parent="."]
self_modulate = Color( 0, 0, 0, 0.705882 )
show_behind_parent = true
margin_right = 517.0
margin_bottom = 796.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HireBG2" type="Panel" parent="."]
self_modulate = Color( 0, 0, 0, 0.705882 )
show_behind_parent = true
margin_left = 540.0
margin_right = 1003.0
margin_bottom = 580.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HireBG3" type="Panel" parent="."]
self_modulate = Color( 0, 0, 0, 0.705882 )
show_behind_parent = true
margin_left = 540.0
margin_top = 608.0
margin_right = 1003.0
margin_bottom = 796.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SlaveList" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="SlaveList"]
margin_left = 82.0
margin_top = 147.0
margin_right = 487.0
margin_bottom = 636.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="SlaveList/ScrollContainer"]
margin_right = 405.0
rect_min_size = Vector2( 405, 0 )

[node name="Button" type="TextureButton" parent="SlaveList/ScrollContainer/VBoxContainer"]
visible = false
margin_right = 405.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
toggle_mode = true
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
expand = true

[node name="name" type="Label" parent="SlaveList/ScrollContainer/VBoxContainer/Button"]
margin_left = 53.0526
margin_top = 11.8421
margin_right = 330.053
margin_bottom = 41.8421
custom_fonts/font = ExtResource( 31 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Price" type="Label" parent="SlaveList/ScrollContainer/VBoxContainer/Button"]
margin_left = 326.0
margin_top = 13.0
margin_right = 391.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 31 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "100"
align = 2

[node name="icon" type="TextureRect" parent="SlaveList/ScrollContainer/VBoxContainer/Button"]
margin_left = 2.01312
margin_top = 2.08087
margin_right = 47.0131
margin_bottom = 47.0809
mouse_filter = 2
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VScrollBar" type="VScrollBar" parent="SlaveList"]
margin_left = 23.0
margin_top = 160.0
margin_right = 35.0
margin_bottom = 667.0
theme = ExtResource( 13 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 733.0
margin_top = 110.0
margin_right = 988.0
margin_bottom = 192.0
custom_fonts/normal_font = ExtResource( 31 )
custom_colors/default_color = Color( 0.976471, 0.882353, 0.505882, 1 )

[node name="Label" type="Label" parent="."]
margin_right = 517.0
margin_bottom = 88.0
custom_fonts/font = ExtResource( 30 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "List of Slaves"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 540.0
margin_right = 1003.0
margin_bottom = 103.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="professions" type="GridContainer" parent="TextureRect"]
margin_left = 2.0
margin_top = 6.0
margin_right = 91.0
margin_bottom = 95.0
mouse_filter = 2
custom_constants/hseparation = 2
columns = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureRect" parent="TextureRect/professions" groups=[
"ignore_rightclicks",
]]
visible = false
margin_right = 89.0
margin_bottom = 89.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 89, 89 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 6
script = ExtResource( 4 )

[node name="Label" type="Label" parent="TextureRect/professions/Button"]
visible = false
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 6.0
margin_top = 64.0
margin_right = 84.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 2 )
text = "Label"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProfIcon" type="TextureRect" parent="TextureRect/professions/Button"]
show_behind_parent = true
margin_left = 6.0
margin_top = 6.0
margin_right = 84.0
margin_bottom = 84.0
expand = true
stretch_mode = 1

[node name="exp" type="Label" parent="."]
margin_left = 604.0
margin_top = 268.0
margin_right = 714.0
margin_bottom = 303.0
text = "exp"
align = 1
valign = 1

[node name="Portrait" type="TextureRect" parent="."]
margin_left = 540.0
margin_top = 103.0
margin_right = 714.0
margin_bottom = 262.0
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sex" type="TextureRect" parent="."]
margin_left = 540.0
margin_top = 103.0
margin_right = 581.0
margin_bottom = 140.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="base_stats" type="VBoxContainer" parent="." groups=[
"hide_stranger",
]]
margin_left = 727.0
margin_top = 208.0
margin_right = 991.0
margin_bottom = 301.0
custom_constants/separation = 9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hp" type="TextureProgress" parent="base_stats"]
margin_right = 264.0
margin_bottom = 25.0
rect_min_size = Vector2( 200, 25 )
value = 100.0
rounded = true
texture_over = ExtResource( 9 )
texture_progress = ExtResource( 12 )
nine_patch_stretch = true
stretch_margin_left = 5
stretch_margin_top = 5
stretch_margin_right = 5
stretch_margin_bottom = 5

[node name="Label" type="Label" parent="base_stats/hp"]
margin_top = -1.0
margin_right = 262.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "1.100"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mp" type="TextureProgress" parent="base_stats"]
margin_top = 34.0
margin_right = 264.0
margin_bottom = 59.0
rect_min_size = Vector2( 200, 25 )
value = 50.0
texture_over = ExtResource( 9 )
texture_progress = ExtResource( 10 )
nine_patch_stretch = true

[node name="Label" type="Label" parent="base_stats/mp"]
margin_top = -2.0
margin_right = 262.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "1.100"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lust" type="TextureProgress" parent="base_stats"]
margin_top = 68.0
margin_right = 264.0
margin_bottom = 93.0
rect_min_size = Vector2( 200, 25 )
value = 50.0
texture_over = ExtResource( 9 )
texture_progress = ExtResource( 11 )
nine_patch_stretch = true

[node name="Label" type="Label" parent="base_stats/lust"]
margin_top = -2.0
margin_right = 263.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "1.100"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="factors" type="VBoxContainer" parent="."]
margin_left = 546.0
margin_top = 314.0
margin_right = 667.0
margin_bottom = 559.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = -2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="base_exp" type="TextureRect" parent="factors"]
visible = false
margin_right = 50.0
margin_bottom = 35.0
rect_min_size = Vector2( 50, 35 )
mouse_filter = 0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="factors/base_exp"]
margin_left = 69.0
margin_top = 7.0
margin_right = 118.0
margin_bottom = 31.0
mouse_filter = 1
text = "0"

[node name="growth_factor" type="Label" parent="factors" groups=[
"hide_master",
]]
margin_right = 50.0
margin_bottom = 35.0
rect_min_size = Vector2( 50, 35 )
mouse_filter = 0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "GRO"

[node name="Label" type="Label" parent="factors/growth_factor"]
margin_left = 69.2385
margin_top = -4.0
margin_right = 229.239
margin_bottom = 28.0
custom_fonts/font = ExtResource( 31 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Excellent"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="physics_factor" type="Label" parent="factors"]
margin_top = 33.0
margin_right = 50.0
margin_bottom = 68.0
rect_min_size = Vector2( 50, 35 )
mouse_filter = 0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "PHY"

[node name="Label" type="Label" parent="factors/physics_factor"]
margin_left = 69.2385
margin_top = -4.0
margin_right = 229.239
margin_bottom = 28.0
custom_fonts/font = ExtResource( 31 )
text = "25"

[node name="magic_factor" type="Label" parent="factors"]
margin_top = 66.0
margin_right = 57.0
margin_bottom = 101.0
rect_min_size = Vector2( 50, 35 )
mouse_filter = 0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "MAG"

[node name="Label" type="Label" parent="factors/magic_factor"]
margin_left = 69.2385
margin_top = -4.0
margin_right = 229.239
margin_bottom = 28.0
custom_fonts/font = ExtResource( 31 )
text = "25"

[node name="wits_factor" type="Label" parent="factors"]
margin_top = 99.0
margin_right = 50.0
margin_bottom = 134.0
rect_min_size = Vector2( 50, 35 )
mouse_filter = 0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "WIT"

[node name="Label" type="Label" parent="factors/wits_factor"]
margin_left = 69.2385
margin_top = -4.0
margin_right = 229.239
margin_bottom = 28.0
custom_fonts/font = ExtResource( 31 )
text = "25"

[node name="charm_factor" type="Label" parent="factors"]
margin_top = 132.0
margin_right = 52.0
margin_bottom = 167.0
rect_min_size = Vector2( 50, 35 )
mouse_filter = 0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "CHA"

[node name="Label" type="Label" parent="factors/charm_factor"]
margin_left = 69.2385
margin_top = -4.0
margin_right = 229.239
margin_bottom = 28.0
custom_fonts/font = ExtResource( 31 )
text = "25"

[node name="sexuals_factor" type="Label" parent="factors"]
margin_top = 165.0
margin_right = 50.0
margin_bottom = 200.0
rect_min_size = Vector2( 50, 35 )
mouse_filter = 0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "SEX"

[node name="Label" type="Label" parent="factors/sexuals_factor"]
margin_left = 69.2385
margin_top = -4.0
margin_right = 229.239
margin_bottom = 28.0
custom_fonts/font = ExtResource( 31 )
text = "25"

[node name="tame_factor" type="Label" parent="factors" groups=[
"hide_master",
]]
margin_top = 198.0
margin_right = 55.0
margin_bottom = 233.0
rect_min_size = Vector2( 50, 35 )
mouse_filter = 0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "TAM"

[node name="Label" type="Label" parent="factors/tame_factor"]
margin_left = 69.2385
margin_top = -4.0
margin_right = 229.239
margin_bottom = 28.0
custom_fonts/font = ExtResource( 31 )
text = "25"

[node name="timid_factor" type="Label" parent="factors" groups=[
"hide_master",
]]
margin_top = 231.0
margin_right = 54.0
margin_bottom = 266.0
rect_min_size = Vector2( 50, 35 )
mouse_filter = 0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "TMD"

[node name="Label" type="Label" parent="factors/timid_factor"]
margin_left = 69.2385
margin_top = -4.0
margin_right = 229.239
margin_bottom = 28.0
custom_fonts/font = ExtResource( 31 )
text = "25"

[node name="food_consumption" type="TextureRect" parent="factors"]
visible = false
margin_top = 315.0
margin_right = 50.0
margin_bottom = 350.0
rect_min_size = Vector2( 50, 35 )
mouse_filter = 0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 20 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="factors/food_consumption"]
margin_left = 69.2385
margin_top = 7.0
margin_right = 229.239
margin_bottom = 31.0
text = "25"

[node name="traitslabel" type="Label" parent="."]
margin_left = 722.0
margin_top = 309.0
margin_right = 995.0
margin_bottom = 349.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "Sex Traits"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer2" type="ScrollContainer" parent="."]
margin_left = 733.0
margin_top = 392.0
margin_right = 989.0
margin_bottom = 566.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="traits" type="VBoxContainer" parent="ScrollContainer2"]
margin_right = 255.0
rect_min_size = Vector2( 255, 0 )
custom_constants/separation = 9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Label" parent="ScrollContainer2/traits"]
visible = false
margin_right = 255.0
margin_bottom = 27.0
rect_min_size = Vector2( 255, 0 )
mouse_filter = 0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "1.100"
align = 1
valign = 1

[node name="ConsentLabel" type="Label" parent="."]
margin_left = 722.0
margin_top = 346.0
margin_right = 997.0
margin_bottom = 386.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "Consent"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PurchaseButton" type="TextureButton" parent="."]
margin_left = 581.0
margin_top = 667.0
margin_right = 961.0
margin_bottom = 747.0
texture_normal = ExtResource( 23 )
texture_pressed = ExtResource( 25 )
texture_hover = ExtResource( 24 )

[node name="Label" type="Label" parent="PurchaseButton"]
margin_right = 380.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "Show Info"
align = 1
valign = 1

[node name="HireMode" type="TextureButton" parent="."]
margin_left = 260.0
margin_top = 88.0
margin_right = 388.0
margin_bottom = 130.0
rect_scale = Vector2( -1, 1 )
texture_normal = ExtResource( 27 )
texture_pressed = ExtResource( 28 )
texture_hover = ExtResource( 26 )

[node name="Label" type="Label" parent="HireMode"]
margin_left = 107.0
margin_right = 214.0
margin_bottom = 42.0
rect_scale = Vector2( -1, 1 )
custom_fonts/font = ExtResource( 31 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "Hire"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SellMode" type="TextureButton" parent="."]
margin_left = 260.0
margin_top = 88.0
margin_right = 388.0
margin_bottom = 130.0
texture_normal = ExtResource( 27 )
texture_pressed = ExtResource( 28 )
texture_hover = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SellMode"]
margin_right = 106.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 31 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "Sell"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 63.0
margin_top = 720.0
margin_right = 466.0
margin_bottom = 778.0
custom_constants/separation = 15
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnslaveButton" type="TextureButton" parent="HBoxContainer"]
margin_right = 194.0
margin_bottom = 58.0
theme = ExtResource( 29 )
texture_normal = ExtResource( 35 )
texture_pressed = ExtResource( 34 )
texture_hover = ExtResource( 33 )

[node name="Label" type="Label" parent="HBoxContainer/EnslaveButton"]
margin_right = 194.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 36 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "Enslave"
align = 1
valign = 1

[node name="UpgradeButton" type="TextureButton" parent="HBoxContainer"]
margin_left = 209.0
margin_right = 403.0
margin_bottom = 58.0
theme = ExtResource( 29 )
texture_normal = ExtResource( 35 )
texture_pressed = ExtResource( 34 )
texture_hover = ExtResource( 33 )

[node name="Label" type="Label" parent="HBoxContainer/UpgradeButton"]
margin_right = 194.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 36 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "Upgrade"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
